<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarExercise"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/white"
        android:theme="@style/ToolBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/colorPrimary" />


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_ready_for"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/flRestView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/flRestView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_circular_color_accent_border"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarExercise">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/circular_progress_gray"
            android:indeterminate="false"
            android:max="10"
            android:progress="100"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:rotation="-90" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_accent_color_bg"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="10" />

        </LinearLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/tvUpcomingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upcoming_exercise"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flRestView" />

    <TextView
        android:id="@+id/tvUpcomingExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUpcomingTitle"
        tools:text="Push-ups" />

    <ImageView
        android:id="@+id/exerciseImage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/exercise_image"
        android:scaleType="fitXY"
        android:src="@drawable/exercise1"
        app:layout_constraintBottom_toTopOf="@+id/tvExerciseName"
        app:layout_constraintTop_toTopOf="@id/toolbarExercise"

        />

    <TextView
        android:id="@+id/tvExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercisename"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exerciseImage"
        tools:visibility="visible" />

    <FrameLayout
        android:id="@+id/flExerciseView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_circular_color_accent_border"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/rvExerciseStatus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExerciseName"
        tools:visibility="visible">

        <ProgressBar
            android:id="@+id/progressBarExercise"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/circular_progress_gray"
            android:indeterminate="false"
            android:max="30"
            android:progress="300"
            android:progressDrawable="@drawable/circular_progress_bar"
            android:rotation="-90" />

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/item_circular_accent_color_bg"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_ExerciseTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:textSize="25sp"
                android:textStyle="bold"
                tools:text="30" />

        </LinearLayout>

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvExerciseStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>